fix: make popup more natural on mobile screen

--- a/apps/festival/static/css/popup.css
+++ b/apps/festival/static/css/popup.css
@@ -39,13 +39,26 @@
   text-decoration: underline;
 }
 .container__popup {
-  width: 400;
-  height: 400;
+  width: 350;
+  height: 350;
+  max-width: 400px;
+  max-height: 400px;
+
+  width: auto;
+  height: 359px;
+  background: #ccc;
+  /* resize:both; */
+  overflow:auto; /* something other than visible */
+  /* line-height: 150px; */
 }
 .popup-image {
-  width: 400;
-  height: 400;
-  margin-left: auto;
-  margin-right: auto;
-  display: block;
+  /* width: 50%; */
+  /* max-width: 400px; */
+  /* margin-left: auto; */
+  /* margin-right: auto; */
+  /* display: block; */
+  width: 340;
+  max-width: 100%;
+  max-height: 100%;
+  vertical-align: middle;
 }
